# QuerySheets

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release-desktop.yml  release.yml
apps/query-sheets-studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/query-sheets-studio/src/: App.tsx  i18n.tsx  main.tsx  styles.css
apps/query-sheets-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/query-sheets-studio/src-tauri/capabilities/: default.json
apps/query-sheets-studio/src-tauri/icons/: icon.icns
apps/query-sheets-studio/src-tauri/src/: main.rs
apps/query-sheets-studio/src/components/: ErrorBoundary.tsx  ExplorerPanel.tsx  ResultsPanel.tsx  SqlEditorPanel.tsx  StatusBar.tsx  TitleBar.tsx
apps/query-sheets-studio/src/services/: queryStudioApi.ts
apps/query-sheets-studio/src/types/: query.ts
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: export_integration.rs  query_error_integration.rs  query_success_integration.rs  sheet_selection_integration.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: aggregation.rs  errors.rs  expr.rs  lib.rs  ordering.rs  parser.rs  projection.rs  text.rs
crates/query/src/tests/: aggregation_error_tests.rs  aggregation_success_tests.rs  join_tests.rs  mod.rs  order_by_tests.rs  pagination_tests.rs  select_tests.rs
docs/queries/: customers.sql  products.sql
docs/sheets/: customers.xlsx  products.xlsx
