[workspace]
members = [
    "crates/core",
    "crates/adapters",
    "crates/query",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
sqlparser = "0.53"
calamine = "0.31"
csv = "1.3"
serde_json = "1.0"
rayon = "1.10"