[package]
name = "query-sheets-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/obraia/QuerySheets"
homepage = "https://github.com/obraia/QuerySheets"
description = "CLI for querying Excel spreadsheets with SQL"

[features]
default = []
parallel = ["query-sheets-query/parallel"]

[[bin]]
name = "query-sheets"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
query-sheets-adapters = { path = "../adapters" }
query-sheets-query = { path = "../query" }
query-sheets-core = { path = "../core" }
csv = { workspace = true }
serde_json = { workspace = true }
rustyline = "14.0"

[dev-dependencies]
assert_cmd = "2.2"
tempfile = "3.27"
rust_xlsxwriter = "0.94"
