[package]
name = "query-sheets-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
query-sheets-core = { path = "../core" }
sqlparser = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }
