[package]
name = "query-sheets-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
calamine = "0.31"
query-sheets-adapters = { path = "../../../crates/adapters" }
query-sheets-query = { path = "../../../crates/query" }
query-sheets-core = { path = "../../../crates/core" }
csv = "1"
serde_json = "1"

[workspace]
